changed media type to application/xml instead of application/rss+xml